[project]
name = "traceflow-win"
version = "1.0.0"
description = "A windows compatible path tracing package based off the functionality of rucarrol's traceflow."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Salem Shreve", email = "salemshreve02@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "defusedxml==0.7.1",
    "dnspython==2.7.0",
    "python-dateutil==2.9.0.post0",
    "scapy==2.6.1",
    "six==1.17.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "traceflow_win" }

[tool.setuptools.packages.find]
where = ["traceflow_win"]